# ChemmineOB

./: DESCRIPTION  INSTALL  LICENSE  NAMESPACE  NEWS  README  README.md  configure  configure.ac
R/: ChemmineOB.R  wrappers.R
inst/: NEWS.Rd
inst/doc/: ChemmineOB.Rnw  bibtex.bib
inst/unitTests/: test_conversions.R  test_main.R
man/: OB-classes.Rd  canonicalNumbering.Rd  canonicalNumbering_OB.Rd  convertFormat.Rd  convertFormatFile.Rd  convertToImage.Rd  exactMass_OB.Rd  fingerprint_OB.Rd  forEachMol.Rd  genDescriptors.Rd  prop_OB.Rd  smartsSearch_OB.Rd
src/: ChemmineOB.cpp  Makevars  Makevars.in  Makevars.win  canonical.cpp  openbabel.cc  openbabel_rcpp.cc
tests/: runTests.R
vignettes/: ChemmineOB.Rmd  ChemmineOB.Rmd_bootstrap  ChemmineOB.Rnw  ChemmineOB.html  Makefile  Makefile_bootstrap  header.html  html.template_bootstrap  references.bib
